# cpp-expression-evaluator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile cmd.txt
include/: configparser.h  debug_logs.h  evaluator.h  operators.h  tags.h  tokenParser.h
lib/: debug_logs.h  evaluator.cpp  operators.h  tags.h
src/: configparser.cpp  debug_logs.cpp  evaluator.cpp  main.cpp  operators.cpp
tests/: tests.cpp
